Remove all warnings about nativeQuery